--- a/index.html
+++ b/index.html
@@ -1,11 +1,42 @@
+<!-- index.html -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="bn">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Two Column Calculator</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="container">
+        <h2>Two Column Calculator</h2>
+
+        <table id="dataTable">
+            <thead>
+                <tr>
+                    <th>Column 1</th>
+                    <th>Column 2</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><input type="number" value="0"></td>
+                    <td><input type="number" value="0"></td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
+
+        <button id="addRowBtn">Add Row</button>
+        <button id="calculateBtn">Calculate</button>
+
+        <div id="resultBox">Result: <span id="resultValue">0</span></div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
+
+
+
