Create option to delete button Row/Column separately.

--- a/index.html
+++ b/index.html
@@ -20,15 +20,11 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td><input type="number" value="0"></td>
-                    <td><input type="number" value="0"></td>
-                    <td></td>
-                </tr>
             </tbody>
         </table>
 
-        <button id="addRowBtn">Add Row</button>
+        <button id="addCol1">Add Row to Column 1</button>
+        <button id="addCol2">Add Row to Column 2</button>
         <button id="calculateBtn">Calculate</button>
 
         <div id="resultBox">Result: <span id="resultValue">0</span></div>
@@ -37,6 +33,4 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
 
