--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Two Column Calculator</title>
+    <title>Lav Loss Calculation</title>
     <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
     <div class="container">
-        <h2>Two Column Calculator</h2>
+        <h2>Lav Loss Calculation</h2>
         <table class="kib_table" id="dataTable">
             <thead  class="kib_thead">
                 <tr  class="kib_thead_tr">
-                    <th>Column 1</th>
-                    <th>Column 2</th>
+                    <th>Positive Value</th>
+                    <th>Nagative Value</th>
                 </tr>
             </thead>
             <tbody class="kib_tbody"></tbody>
         </table>
 
         <div class="add_row_col_btn_area">
-            <button id="addCol1">Add Row to Column 1</button>
-            <button id="addCol2">Add Row to Column 2</button>
+            <button id="addCol1">Add More Positive Value</button>
+            <button id="addCol2">Add More Nagative Value</button>
         </div>
 
         <div class="all_btn_box">
